# llm-load-test

./: .flake8  .gitignore  .gitleaks.toml  Containerfile  LICENSE  README  README.md  ansible_wisdom_query_generator.py  base.py  config-openai.yaml  config.json  config.yaml  dataset.json  dataset.py  demo.py  generation_pb2.py  generation_pb2_grpc.py  ghz_frontend.py  input_generator.py  linter.sh  load_test.py  logging_utils.py  openorca-subset-006.json  performance_visualization.py  preprocess-dataset.py  preprocess_dataset.py  pyproject.toml  requirements.txt  result.py  s3storage.py  start-minio.sh  test-requirements.txt  tox.ini  user.py  utils.py  validate.sh
.github/workflows/: build.yml  linters.yml
ci/azure/: azure-pipelines.yml
contrib/: requirements-contrib.txt  synthetic_datagen.py
contrib/synthetic_datagen/: README.md  generate_profile.py  requirements.txt  synthetic_datagen.py
contrib/synthetic_datagen/corpus/: 01.txt  02.txt  03.txt  04.txt  06.txt  07.txt  08.txt  09.txt  10.txt  CREDITS  LICENSE
datasets/: generate_dataset.py  openorca-subset-006.json  preprocess_dataset.py  processorca.py  python_code_alpaca_subset.jsonl
datasets/profiles/: README.md  SILO_normal_granite-3.1-8b-instruct.jsonl  SISO_normal_granite-3.1-8b-instruct.jsonl
example-configs/: config-tgis.yaml
metadata/: prometheus.py
output/: output.json
plugins/: azure_maap_plugin.py  azure_openai_plugin.py  azure_serverless_plugin.py  caikit_client_plugin.py  caikit_embedding_plugin.py  dummy_plugin.py  hf_tgi_plugin.py  openAPI_plugin.py  openai_llama_plugin.py  openai_plugin.py  plugin.py  text_generation_webui_plugin.py  tgis_grpc_plugin.py  vllm_plugin.py
src/llm_load_test/: __init__.py  dataset.py  generation_pb2_grpc.py  load_test.py  result.py  user.py  utils.py
src/llm_load_test/plugins/: __init__.py  dummy_plugin.py  hf_tgi_plugin.py  openai_plugin.py  plugin.py  tgis_grpc_plugin.py
