[project]
name = "llm-load-test"
version = "0.1.0"
description = "A tool to load test large language models running in different runtimes / behind different APIs."
authors = [
    {name = "David Gray", email = "dagray@redhat.com"},
]
dependencies = [
    "numpy>=2.0.0; python_version < '3.10'",
    "numpy>=2.2.1; python_version >= '3.10'",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "grpcio>=1.70.0",
    "google-api-python-client>=2.162.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
load-test = "llm_load_test.load_test:main"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "I",   # isort
  "PL",  # pylint

#   "E",   # pycodestyle
#   "UP",  # pyupgrade,
#   "S",   # bandit
#   "N",   # pep8-naming
]
ignore = [
    "D203", # conflicts with D211
    "D212", # conflicts with D213
]
